# HealthLink

./: .env.example  .gitignore  AGENT_DEVELOPMENT_PLAN.md  KNOWLEDGE_BASE_FEATURE_PLAN.md  README.md  pyproject.toml  requirements.txt  智能医疗助手_PRD_v1.1.md
app/: __init__.py  main.py
app/agents/: main_chat_agent.py  summarization_agent.py  title_generation_agent.py
app/api/: admin_user_api.py  chat_api.py  chat_app_api.py  chat_web_api.py  knowledge_file_api.py
app/core/: auth.py  config.py  constants.py  exceptions.py  llm.py
app/db/: db.py  redis_config.py
app/models/: base.py  chat.py  knowledge.py  user.py
app/schemas/: chat_schema.py  json_response.py  knowledge_schema.py
app/services/: admin_user_service.py  chat_service.py  knowledge_service.py  llm_service.py  memory_service.py  milvus_service.py  minio_service.py  vectorization_service.py
app/tools/: knowledge_retriever_tool.py
scripts/: init_db.sql  populate_knowledge_base.py  test.py
